--- a/atividade01/atividade1.ipynb
+++ b/atividade01/atividade1.ipynb
@@ -8094,7 +8094,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('venv': venv)",
+   "display_name": "Python 3.10.3 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -8108,12 +8108,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "614f4660d2cb6034c554c4db362d3ce97255cf058d9b29a85258d623c6b4cd4d"
+    "hash": "c390d80876fbd9910d2458d1dd8c94156d7fff4a02d59b7b261bce8b8fe96b77"
    }
   }
  },
